[package]
name = "eink-parker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
rtic-monotonic = "1.0.0"

shared-bus-rtic = { version= "0.2.2", features=["thumbv6"]}


#epd-waveshare = "0.5.0"
epd-waveshare = { path = "../epd-waveshare" }
embedded-graphics = "0.7.0-alpha.2"
ssd1306 = "0.7.1"
ufmt = "0.2.0"
eg-seven-segment = "0.1.0"
asm-delay = "0.9.0"

heapless = {version = "0.7.16", features = ["ufmt-impl"]}

#ds1302 =  { path = "../ds1302-rs" }
ds1302 = "4.0.0"
nb = "1.0.0"
fugit-timer = "0.1.3"
fugit = "0.3.6"
format_no_std = "1.0.0"

[dependencies.rand]
default-features = false
version = "0.8.3"

[dependencies.nrf51-hal]
version = "0.15.1"
default-features = false
features = ["xxAB-package", "rt"]

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]


[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false


[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations